@@ -192,7 +192,7 @@ class pts_test_profile extends pts_test_profile_parser
 			// set SKIP_TEST_SUPPORT_CHECKS=1 environment variable for debugging purposes to run tests on unsupported platforms
 			return true;
 		}
-		if($this->is_test_architecture_supported() == false)
+		else if($this->is_test_architecture_supported() == false)
 		{
 			PTS_IS_CLIENT && $report_warnings && pts_client::$display->test_run_error($this->get_identifier() . ' is not supported on this architecture: ' . phodevi::read_property('system', 'kernel-architecture'));
 			$test_supported = false;
