@@ -30,7 +30,7 @@ define('PTS_PATH', dirname(dirname(__FILE__)) . '/');
 // SILENT = Load all normal pts-core files, but don't run client code
 if(!defined('PTS_MODE'))
 {
-	define('PTS_MODE', in_array(($m = getenv('PTS_MODE')), array('CLIENT', 'LIB', 'SILENT')) ? $m : 'CLIENT');
+	define('PTS_MODE', in_array(($m = getenv('PTS_MODE')), array('CLIENT', 'LIB', 'WEB_CLIENT', 'SILENT')) ? $m : 'CLIENT');
 }
 
 // Any PHP default memory limit should be fine for PTS, until you run image quality comparison tests that begins to consume memory
@@ -42,15 +42,6 @@ if(!PTS_IS_CLIENT)
 {
 	// pts-core is acting as a library, return now since no need to run client code
 	return;
-}
-
-pts_define('IS_PTS_WEB_INTERFACE', php_sapi_name() == 'cli-server');
-
-if(IS_PTS_WEB_INTERFACE == 'cli-server')
-{
-	$argv = array();
-	$argv[1] = 'webui';
-	$argc = count($argv);
 }
 
 // Default to C locale
@@ -76,7 +67,7 @@ $sent_command = strtolower(str_replace('-', '_', (isset($argv[1]) ? $argv[1] : n
 $quick_start_options = array('dump_possible_options');
 pts_define('QUICK_START', in_array($sent_command, $quick_start_options));
 
-if(QUICK_START == false && IS_PTS_WEB_INTERFACE == false)
+if(QUICK_START == false)
 {
 	pts_client::program_requirement_checks(true);
 }
@@ -122,7 +113,7 @@ if(is_file(PTS_PATH . 'pts-core/commands/' . $sent_command . '.php') == false)
 
 pts_define('PTS_USER_LOCK', PTS_USER_PATH . 'run_lock');
 
-if(QUICK_START == false && IS_PTS_WEB_INTERFACE == false)
+if(QUICK_START == false)
 {
 	if(pts_client::create_lock(PTS_USER_LOCK) == false)
 	{
@@ -143,7 +134,7 @@ for($i = 2; $i < $argc && isset($argv[$i]); $i++)
 	array_push($pass_args, $argv[$i]);
 }
 
-if(QUICK_START == false && IS_PTS_WEB_INTERFACE == false)
+if(QUICK_START == false)
 {
 	pts_client::user_agreement_check($sent_command);
 	pts_client::user_hardware_software_reporting();
