@@ -139,7 +139,8 @@ function pts_version_codenames()
 pts_define('PTS_VERSION', '5.0.0m0');
 pts_define('PTS_CORE_VERSION', 4900);
 pts_define('PTS_CODENAME', 'PLAVSK');
-pts_define('PTS_IS_CLIENT', (defined('PTS_MODE') && PTS_MODE == 'CLIENT'));
+pts_define('PTS_IS_CLIENT', (defined('PTS_MODE') && strstr(PTS_MODE, 'CLIENT') !== false));
+pts_define('PTS_IS_WEB_CLIENT', (defined('PTS_MODE') && PTS_MODE == 'WEB_CLIENT'));
 pts_define('PTS_IS_DEV_BUILD', (substr(PTS_VERSION, -2, 1) == 'm'));
 
 if(!defined('PTS_PATH'))
